# StealthRelayer

./: README.md
backend/: Cargo.toml
backend/src/: main.rs  old_main.rs
backend/src/routes/: health.rs  meta.rs  mod.rs  payments.rs  relay.rs  send.rs
backend/src/stealth/: mod.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DepositPanel.tsx  EscapeHatchPanel.tsx
frontend/src/lib/: api.ts  relay.ts  utils.ts
stealth-relayer/: pnpm-lock.yaml
stealth-relayer/src/components/: AppShell.tsx  ProfilePanel.tsx  ui.tsx
stealth-relayer/src/lib/: session.tsx
stealthgen/src/relayer/: validate.rs
stealthgen/src/stealth/: derive.rs  recover.rs  scan.rs
