[package]
name = "stealthgen"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
bincode = "1.3"
blake3 = "1.8.5"
bs58 = "0.5.1"
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
futures-util = "0.3.32"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
solana-address = "2.5"
solana-client = "4.0.0"
solana-commitment-config = "3.1"
solana-instruction = "3.2.0"
solana-keypair = "3.1"
solana-rpc-client-api = "4.0"
solana-signature = "3.3"
solana-signer = "3.0"
solana-system-interface = { version = "3.1", features = ["bincode"] }
solana-transaction = "3.1"
solana-transaction-status-client-types = "4.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }